base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hugin
  name: hugin
  namespace: hugin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hugin
  strategy: {}
  template:
    metadata:
      labels:
        app: hugin
    spec:
      serviceAccountName: hugin-sa
      containers:
      - image: dummy.io/hugin/hugin
        name: hugin
        resources: 
            limits:
              cpu: 1
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 2Gi
