base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hugin-svc
  namespace: hugin
  labels:
    app.kubernetes.io/part-of: hugin
    app.kubernetes.io/name: hugin-svc
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app.kubernetes.io/name: hugin-app
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http   
  type: ClusterIP
