base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hugin-ingress
  namespace: hugin
  labels:
    app.kubernetes.io/part-of: hugin
    app.kubernetes.io/name: hugin-ingress
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  ingressClassName: nginx
  rules:
    - host: "hugin.test"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: hugin-svc
                port:
                  name: http
